# QuantBT

./: .gitignore  CLAUDE.md  QuantBT-GOAL.md  README.md  docker-compose.yml  fibonacci_order_optimizer.py  package.json  pytest.ini  start-qb.bat  start-qb.ps1  斐波那契回撤-搏反弹.ipynb  斐波那契通道.ipynb
app/: README.md  package-lock.json  package.json  start-qb.bat  start-qb.js  start-qb.ps1  start.sh
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/icons/: icon.icns
app/desktop/src-tauri/src/: lib.rs  main.rs
deploy/: backend.Dockerfile  frontend.Dockerfile  launch_quantbt.py  nginx.conf  quantbt-backend.spec  secrets.yaml.example
dev/: .gitignore  CODEMAP.md  DECISIONS.md  DEVMAP.md  GOAL.md  ISSUES.md  LESSONS.md  README.md  RULES.md  RULES.project.md  STATE.md  TEAM.md  experience.md
docs/: QuantBT_GOAL终态_机构级量化研究平台报告.docx  QuantBT_项目评估说明_私募量化部门.docx  api-reference.md  backtest-run-format.md  binance-security-guide.md  data-connector-guide.md  hermes-subscription-proxy.md  hs300-quickstart.md  installer-guide.md  jq-overview-metrics.md  jupyter-run-detail.md  llm-auth-quickstart.md  secrets-guide.md  strategy-dev-guide.md  user-manual.md  user-quickstart-v0.9.md  user-quickstart.md
examples/: _e2e_common.py  run_a_share_ml_demo.py  run_a_share_real_demo.py  run_crypto_perp_demo.py
scripts/: backfill.py  dual_model_review.py  gen_glossary_stubs.py  gen_model_cards.py  hs300_onboard.py  llm_auth.py  purge_goal_closure_seeds.py  query_first_run_time.py  release_check.py  validate_glossary.py  (+2 more)
(+1723 files in other folders)
