[package]
name = "quantbt-desktop"
version = "1.0.0"
description = "QuantBT 桌面端（Tauri 包装 React 前端 + 内置 uvicorn 子进程）"
authors = ["QuantBT Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "quantbt_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
